[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
postgres = "*"
serde = "1.0.228"
serde_json = "1.0.149"
serde_derive = "1.0.228"
axum = "0.8.8"
tokio = {version = "1.49.0",features = ["full"]}
thiserror = "2.0.18"
anyhow = "1.0.101"
sqlx = {version = "0.8.6",features = ["runtime-tokio","postgres"]}
dotenvy = "0.15.7"